<resources>
    <string name="app_name">TodoBook</string>
    <string name="author_name">Author Name</string>
    <string name="book_name">Book Name</string>
    <string name="fiction">Fiction</string>
    <string name="non_fiction">Non-Fiction</string>
    <string name="adults">Adults</string>
    <string name="add_book">Add Book</string>
    <string name="update_book">Update Book</string>
    <string name="generation">generation</string>
    <string name="teens">Teens</string>
    <string name="children">Children</string>
    <string name="select_date">Select Date</string>
    <string-array name="genre_options">
        <item>Social Science</item>
        <item>Maths</item>
        <item>Science</item>
        <item>English</item>
        <item>Other</item>
    </string-array>
    <string name="valid_bookName">book name field cannot be empty</string>
    <string name="valid_authorName">author name field cannot be empty</string>
    <string name="valid_Date">please select date.field cannot be empty</string>
    <string name="add_task">Add Task</string>
    <string name="welcome_to_todo_book_app">Welcome to Todo Book App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="age_groups">Age Groups</string>
    <string name="book_list">Book List</string>
    <string name="book_details">Book Details</string>
    <string name="book_name1">Book Name :</string>
    <string name="author">Author :</string>
    <string name="genre">Genre :</string>
    <string name="age_groups1">Age Groups :</string>
    <string name="faction_type">Faction Type :</string>
    <string name="n_a">N/A</string>
    <string name="search_books">Search books</string>
</resources>