<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8dp"
    app:cardCornerRadius="@dimen/_8dp"
    app:cardElevation="@dimen/_4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_12dp">

        <TextView
            android:id="@+id/tvBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textStyle="bold"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvAuthorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textSize="@dimen/_14sp"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="@dimen/_4dp" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generation"
            android:textSize="@dimen/_14sp"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tvAgeGroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_groups"
            android:textSize="@dimen/_14sp"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="4dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

